tests/errors/duplicate_argument.experr
multiple values for argument 'a'
